--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "js-base64": "^3.7.7",
     "vue": "^3.4.37",
     "vue-router": "^4.4.3",
     "vuex": "^4.0.2"
