--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "hls.js": "^1.5.20",
     "js-base64": "^3.7.7",
     "vfonts": "^0.0.3",
     "vue": "^3.4.37",
